Started working on NoiseChisel
Work on integrating NoiseChisel within Gnuastro has started. Currently
it can only compile with the most basic options and help output.

--- a/configure.ac
+++ b/configure.ac
@@ -228,6 +228,12 @@ AC_ARG_ENABLE([mkprof],
 	      [AS_IF([test "x$enable_mkprof" != xno],
                      [enable_mkprof=yes; ayes=true])],
               [enable_mkprof=notset])
+AC_ARG_ENABLE([noisechisel],
+              [AS_HELP_STRING([--enable-noisechisel],
+  	            [Install NoiseChisel and other enabled packages only.])],
+	      [AS_IF([test "x$enable_noisechisel" != xno],
+                     [enable_noisechisel=yes; ayes=true])],
+              [enable_noisechisel=notset])
 AC_ARG_ENABLE([subtractsky],
               [AS_HELP_STRING([--enable-subtractsky],
   	            [Install SubtractSky and other enabled packages only.])],
@@ -257,6 +263,7 @@ AS_IF([test $ayes = true ],
        AS_IF([test $enable_imgwarp = notset], [enable_imgwarp=no])
        AS_IF([test $enable_mknoise = notset], [enable_mknoise=no])
        AS_IF([test $enable_mkprof = notset], [enable_mkprof=no])
+       AS_IF([test $enable_noisechisel = notset], [enable_noisechisel=no])
        AS_IF([test $enable_subtractsky = notset], [enable_subtractsky=no])
        ],
 
@@ -268,6 +275,7 @@ AS_IF([test $ayes = true ],
        AS_IF([test $enable_imgwarp = notset], [enable_imgwarp=yes])
        AS_IF([test $enable_mknoise = notset], [enable_mknoise=yes])
        AS_IF([test $enable_mkprof = notset], [enable_mkprof=yes])
+       AS_IF([test $enable_noisechisel = notset], [enable_noisechisel=yes])
        AS_IF([test $enable_subtractsky = notset], [enable_subtractsky=yes])
        ]
      )
@@ -285,6 +293,7 @@ AM_CONDITIONAL([COND_IMGSTAT], [test $enable_imgstat = yes])
 AM_CONDITIONAL([COND_IMGWARP], [test $enable_imgwarp = yes])
 AM_CONDITIONAL([COND_MKNOISE], [test $enable_mknoise = yes])
 AM_CONDITIONAL([COND_MKPROF], [test $enable_mkprof = yes])
+AM_CONDITIONAL([COND_NOISECHISEL], [test $enable_noisechisel = yes])
 AM_CONDITIONAL([COND_SUBTRACTSKY], [test $enable_subtractsky = yes])
 
 
@@ -303,6 +312,7 @@ AC_CONFIG_FILES([Makefile
                  gnulib/tests/Makefile
                  src/convertt/Makefile
                  src/convolve/Makefile
+                 src/noisechisel/Makefile
                  src/subtractsky/Makefile
                  ])
 
