--- a/Makefile.am
+++ b/Makefile.am
@@ -52,6 +52,9 @@ endif
 if COND_MKPROF
   MAYBE_MKPROF = src/mkprof
 endif
+if COND_NOISECHISEL
+  MAYBE_NOISECHISEL = src/noisechisel
+endif
 if COND_SUBTRACTSKY
   MAYBE_SUBTRACTSKY = src/subtractsky
 endif
@@ -61,7 +64,7 @@ endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
 $(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGCROP) $(MAYBE_IMGSTAT)	\
 $(MAYBE_IMGWARP) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)			\
-$(MAYBE_SUBTRACTSKY) doc tests
+$(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
 
 
 ACLOCAL_AMFLAGS = -I m4
