Convolution on meshs (possibly independent of channels) complete
In order for the noise properties of each channel to not be mixed,
convolution would have be done independently on each mesh. A new set
of functions were added to mesh.c to do the convolution on each
channel independently. Ofcourse, there is also an option
(--fullconvolution) so if the user wants, the convolution will take
place over the full image irrespective of the channels.

--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -19,20 +19,22 @@
 
 # Input:
  hdu                0
- mhdu               0
+ khdu               0
 
 # Output:
 
 # Mesh grid:
- meshsize          64
+ smeshsize         32
+ lmeshsize        256
  nch1               1
  nch2               1
  lastmeshfrac     0.6
  numnearest         9
  smoothwidth        5
 
-# Statistics:
+# Detection:
  mirrordist       1.5
  minmodeq        0.49
+ qthresh          0.3
  sigclipmultip      3
  sigcliptolerance 0.2
