NoiseChisel thresholding done, Convolution on mesh
NoiseChisel's thresholding step is now added.

In order to to add thresholding to NoiseChisel, convolution had to be
defined independently on each channel. So a convolution function was
added to mesh.c. Convolution on the meshs was also added to
SubtractSky and the spatial convolution in Convolve was also changed
to work based on channels.

--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -35,10 +35,10 @@ bin_PROGRAMS = astconvolve
 astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
 convolve.h cite.h
 
-astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lfitsarrayvv	\
--lcheckset -ltiming -lconfigfiles -lastrthreads -lspatialconvolve -lbox
-
-
+astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lcheckset	\
+-lfitsarrayvv -ltiming -lconfigfiles -lmesh -lastrthreads		\
+-lspatialconvolve -lbox -larraymanip -lstatistics -lforqsort		\
+-llinkedlist
 
 
 
