--- a/src/convolve/astconvolve.conf
+++ b/src/convolve/astconvolve.conf
@@ -27,3 +27,9 @@
  khdu                 0
 
 # Output:
+
+# Mesh grid:
+ meshsize          32
+ nch1               1
+ nch2               1
+ lastmeshfrac     0.6
