--- a/src/noisechisel/Makefile.am
+++ b/src/noisechisel/Makefile.am
@@ -32,7 +32,7 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 bin_PROGRAMS = astnoisechisel
 
 astnoisechisel_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-noisechisel.c noisechisel.h
+noisechisel.c noisechisel.h thresh.c thresh.h
 
 astnoisechisel_LDADD = $(top_builddir)/gnulib/lib/libgnu.a		\
 -lconfigfiles -lfitsarrayvv -lcheckset -ltiming -lmesh			\
