--- a/src/subtractsky/astsubtractsky.conf
+++ b/src/subtractsky/astsubtractsky.conf
@@ -19,11 +19,12 @@
 
 # Input:
  hdu                0
+ khdu               0
 
 # Output:
 
 # Mesh grid:
- meshsize          64
+ meshsize          32
  nch1               1
  nch2               1
  lastmeshfrac     0.6
