NoiseChisel's initial detection is now complete
The initial detection steps in NoiseChisel are now imported from the
older program.

--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -36,5 +36,9 @@
  mirrordist       1.5
  minmodeq        0.49
  qthresh          0.3
+ numerosion         2
+ erodengb           4
+ opening            1
+ openingngb         8
  sigclipmultip      3
  sigcliptolerance 0.2
