Continuing work on NoiseChisel
The false detection removal threshold is now applied to the image. We
just have to do the filling-holes, opening and finding the signal to
noise steps to find and remove false detections.

--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -40,5 +40,7 @@
  erodengb           4
  opening            1
  openingngb         8
+ minbfrac        0.75
  sigclipmultip      3
  sigcliptolerance 0.2
+ dthresh          0.0
