Continuing work with NoiseChisel's detection algorithm
Detection is nearly complete. Currently it goes up to the point to
calculate the Signal to noise ratio of the noise and detected objects.

--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -25,7 +25,7 @@
 
 # Mesh grid:
  smeshsize         32
- lmeshsize        256
+ lmeshsize        200
  nch1               1
  nch2               1
  lastmeshfrac     0.6
@@ -44,3 +44,5 @@
  sigclipmultip      3
  sigcliptolerance 0.2
  dthresh          0.0
+ detsnminarea      15
+ detsnhistnbins     0
