NoiseChisel's detection is nearly complete
NoiseChisel's detection algorithm is nearly fully in place now. Both
the background regions and the detection regions are now processed and
the Signal to noise ratio is found for all their connected
components. The Signal to noise ratio limit is also found and smoothed
for all meshs. We just have to remove all the false detections in the
detected regions.

The Histogram and Cumulative frequency functions in statistics were
also corrected to work without any bugs. Until now, there was a
problem when a data element would fall on the last interval.

--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -20,6 +20,7 @@
 # Input:
  hdu                0
  khdu               0
+ skysubtracted      0
 
 # Output:
 
@@ -43,6 +44,8 @@
  minbfrac        0.75
  sigclipmultip      3
  sigcliptolerance 0.2
- dthresh          0.0
+ dthresh         -0.1
  detsnminarea      15
+ minnumfalse      100
  detsnhistnbins     0
+ detquant        0.98
