--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -48,4 +48,5 @@
  detsnminarea      15
  minnumfalse      100
  detsnhistnbins     0
- detquant        0.98
+ detquant        0.99
+ dilate             3
