Config files have full mesh operations, channel convolution
The two major additions now are the following:

 1. The configuration files of the programs which operate on a mesh
    now have the full mesh operations (convolution, interpolation and
    smoothing). So when the user always wants to work on a full image,
    they don't have to say so every time.

 2. In NoiseChisel, when the user had asked to convolve on each
    channel independently, there was a problem for segmentation. The
    problem was that in segmentation, the connecting pixels play a
    vital role and so the discontinuity that was caused by convolving
    over seprate channels would be troublesome.

    A function is now added to mesh.c which will check in the vicinity
    of the inner channel borders and will convolve only those
    pixels. This was worth the trouble, because convolution is the
    single most time consuming step in NoiseChisel and it was not
    worth it to re convolve the whole image.

--- a/src/convolve/astconvolve.conf
+++ b/src/convolve/astconvolve.conf
@@ -18,13 +18,13 @@
 # without any warranty.
 
 # Operating mode:
- spatial              0
- frequency            1
+ spatial            0
+ frequency          1
 
 # Input:
- hdu                  0
- kernel               kernel.fits
- khdu                 0
+ hdu                0
+ kernel             kernel.fits
+ khdu               0
 
 # Output:
 
@@ -33,3 +33,4 @@
  nch1               1
  nch2               1
  lastmeshfrac     0.6
+ fullconvolution    0
