--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -32,6 +32,9 @@
  lastmeshfrac     0.6
  numnearest        10
  smoothwidth        3
+ fullconvolution    0
+ fullinterpolation  0
+ fullsmooth         0
 
 # Detection:
  mirrordist       1.5
