--- a/src/subtractsky/astsubtractsky.conf
+++ b/src/subtractsky/astsubtractsky.conf
@@ -30,6 +30,9 @@
  lastmeshfrac     0.6
  numnearest         9
  smoothwidth        5
+ fullconvolution    0
+ fullinterpolation  0
+ fullsmooth         0
 
 # Statistics:
  mirrordist       1.5
