--- a/src/noisechisel/Makefile.am
+++ b/src/noisechisel/Makefile.am
@@ -31,9 +31,10 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 ## ImageCrop:
 bin_PROGRAMS = astnoisechisel
 
-astnoisechisel_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-noisechisel.c noisechisel.h thresh.c thresh.h binary.c binary.h	\
-label.c label.h detection.c detection.h sky.c sky.h
+astnoisechisel_SOURCES = main.c main.h cite.h ui.c ui.h args.h		\
+noisechisel.c noisechisel.h thresh.c thresh.h binary.c binary.h		\
+label.c label.h detection.c detection.h sky.c sky.h segmentation.c	\
+segmentation.h
 
 astnoisechisel_LDADD = $(top_builddir)/gnulib/lib/libgnu.a		\
 -lconfigfiles -lfitsarrayvv -lcheckset -ltiming -lmesh			\
