Invoking NoiseChisel completed, minor changes in option names
All the options that are particular to NoiseChisel are now explained
in the manual. Some of the options also underwent small corrections:

  - --minbfrac and --minnumfalse were moved under the Input category
    from the detection category in the output of --help. This was
    because these two options are used by the detection as well as
    segmentation steps.

  - --checkthresh was renamed to --checkthreshold. The user can even
    use --checkt to get the functionality. It is just more clear like
    this.

  - --numerosion was changed to --erode. This makes it much more
    easier and comparable to the --opening and --dilate options.

--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -21,6 +21,8 @@
  hdu                0
  khdu               0
  skysubtracted      0
+ minbfrac        0.75
+ minnumfalse      100
 
 # Output:
 
@@ -40,16 +42,14 @@
  mirrordist       1.5
  minmodeq        0.49
  qthresh          0.3
- numerosion         2
+ erode              2
  erodengb           4
  opening            1
  openingngb         8
- minbfrac        0.75
  sigclipmultip      3
  sigcliptolerance 0.2
  dthresh         -0.1
  detsnminarea      15
- minnumfalse      100
  detsnhistnbins     0
  detquant        0.99
  dilate             3
