--- a/Makefile.am
+++ b/Makefile.am
@@ -46,6 +46,9 @@ endif
 if COND_IMGWARP
   MAYBE_IMGWARP = src/imgwarp
 endif
+if COND_MKCATALOG
+  MAYBE_MKCATALOG = src/mkcatalog
+endif
 if COND_MKNOISE
   MAYBE_MKNOISE = src/mknoise
 endif
@@ -63,7 +66,7 @@ if COND_GNULIBCHECK
 endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
 $(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGCROP) $(MAYBE_IMGSTAT)	\
-$(MAYBE_IMGWARP) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)			\
+$(MAYBE_IMGWARP) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)	\
 $(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
 
 
