MakeCatalog is nearly complete
Most of the jobs of MakeCatalog have now been added. Only the flux
related catalog paramters are left.

--- a/src/mkcatalog/Makefile.am
+++ b/src/mkcatalog/Makefile.am
@@ -39,7 +39,7 @@ astmkcatalog_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 mkcatalog.c mkcatalog.h
 
 astmkcatalog_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lconfigfiles	\
--lfitsarrayvv -lcheckset -ltiming -llinkedlist
+-lfitsarrayvv -lcheckset -ltiming -llinkedlist -ltxtarrayvv
 
 
 
