--- a/src/mkcatalog/astmkcatalog.conf
+++ b/src/mkcatalog/astmkcatalog.conf
@@ -18,10 +18,32 @@
 # without any warranty.
 
 # Input:
- hdu            0
- objhdu         1
- clumphdu       2
- skyhdu         3
- stdhdu         4
+ hdu             0
+ objhdu          1
+ clumphdu        2
+ skyhdu          3
+ stdhdu          4
+ zeropoint     0.0
 
 # Output:
+ intwidth        6
+ floatwidth     10
+ accuwidth      15
+ floatprecision  3
+ accuprecision   8
+
+# Catalog columns:
+ clumpsdec       1
+ clumpsra        1
+ dec             1
+ ra              1
+ clumpsy         1
+ clumpsx         1
+ y               1
+ x               1
+ clumpsarea      1
+ area            1
+ numclumps       1
+ idinhostobj     1
+ hostobjid       1
+ id              1
