--- a/src/mkcatalog/astmkcatalog.conf
+++ b/src/mkcatalog/astmkcatalog.conf
@@ -24,26 +24,36 @@
  skyhdu          3
  stdhdu          4
  zeropoint     0.0
+ skysubtracted   0
 
 # Output:
  intwidth        6
- floatwidth     10
+ floatwidth     13
  accuwidth      15
  floatprecision  3
  accuprecision   8
 
 # Catalog columns:
- clumpsdec       1
- clumpsra        1
+ sn              1
+# std             1
+# sky             1
+# rivernum        1
+# riverflux       1
+# clumpsdec       1
+# clumpsra        1
+# clumpsy         1
+# clumpsx         1
+# clumpsmagnitude 1
+# clumpsflux      1
+# clumpsarea      1
+ numclumps       1
+ magnitude       1
+ flux            1
+ area            1
  dec             1
  ra              1
- clumpsy         1
- clumpsx         1
  y               1
  x               1
- clumpsarea      1
- area            1
- numclumps       1
  idinhostobj     1
  hostobjid       1
  id              1
