Minor corrections and additions, used for proof of paper
Some minor corrections and additions were made to NoiseChisel and
MakeCatalog. This commit was used to produce all the outputs of the
proof corrections to the Akhlaghi and Ichikawa (2015) NoiseChisel
paper.

--- a/src/mkcatalog/astmkcatalog.conf
+++ b/src/mkcatalog/astmkcatalog.conf
@@ -46,12 +46,12 @@
 # clumpsmagnitude 1
 # clumpsflux      1
 # clumpsarea      1
- numclumps       1
+# numclumps       1
  magnitude       1
- flux            1
- area            1
- dec             1
- ra              1
+# flux            1
+# area            1
+# dec             1
+# ra              1
  y               1
  x               1
  idinhostobj     1
