--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -21,7 +21,7 @@
  hdu                0
  khdu               0
  skysubtracted      0
- minbfrac        0.75
+ minbfrac         0.5
  minnumfalse      100
 
 # Output:
@@ -59,4 +59,5 @@
  segquant        0.99
  segsnhistnbins     0
  gthresh          0.5
+ minriverlength    15
  objbordersn        1
