Polygon cropping in ImageCrop
ImageCrop can now crop a polygon from an input image. It is currently
written for both the WCS mode and image mode but has only been tested
for the image mode. Tomorrow, I will test it in WCS mode and write
tests for it too.

Also the keepmaxnearriver option was added to the configuration file
of NoiseChisel.

--- a/src/imgwarp/Makefile.am
+++ b/src/imgwarp/Makefile.am
@@ -33,11 +33,11 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 bin_PROGRAMS = astimgwarp
 
 astimgwarp_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
-imgwarp.c imgwarp.h polygon.c polygon.h
+imgwarp.c imgwarp.h
 
 astimgwarp_LDADD = $(top_builddir)/gnulib/lib/libgnu.a	\
 -lconfigfiles -lfitsarrayvv -ltxtarrayvv -lcheckset -ltiming	\
--lastrthreads
+-lastrthreads -lpolygon
 
 
 
