--- a/src/noisechisel/astnoisechisel.conf
+++ b/src/noisechisel/astnoisechisel.conf
@@ -56,6 +56,7 @@
 
 # Segmentation
  segsnminarea      25
+ keepmaxnearriver   0
  segquant        0.99
  segsnhistnbins     0
  gthresh          0.5
