--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -30,7 +30,8 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 noinst_LTLIBRARIES = libconfigfiles.la libfitsarrayvv.la	\
 libtxtarrayvv.la libcheckset.la liblinkedlist.la libtiming.la	\
 libastrthreads.la libbox.la libarraymanip.la libstatistics.la	\
-libspatialconvolve.la libmesh.la libmode.la libforqsort.la
+libspatialconvolve.la libmesh.la libmode.la libforqsort.la	\
+libpolygon.la
 
 libbox_la_SOURCES = box.c $(top_srcdir)/include/box.h
 libbox_la_LIBADD = -lm
@@ -41,6 +42,8 @@ libmesh_la_SOURCES = mesh.c $(top_srcdir)/include/mesh.h
 libmode_la_SOURCES = mode.c $(top_srcdir)/include/mode.h
 
 libtiming_la_SOURCES = timing.c $(top_srcdir)/include/timing.h
+
+libpolygon_la_SOURCES = polygon.c $(top_srcdir)/include/polygon.h
 
 libforqsort_la_SOURCES = forqsort.c $(top_srcdir)/include/forqsort.h
 
