--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -21,7 +21,8 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
-AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
+AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm	\
+-L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 -I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
 
@@ -32,12 +33,12 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 ## ImageCrop:
 bin_PROGRAMS = astimgcrop
 
-astimgcrop_SOURCES = main.c main.h ui.c ui.h args.h imgcrop.c	\
-imgcrop.h wcsmode.c wcsmode.h crop.c crop.h cite.h
+astimgcrop_SOURCES = main.c main.h cite.h ui.c ui.h args.h imgcrop.c	\
+imgcrop.h wcsmode.c wcsmode.h crop.c crop.h
 
 astimgcrop_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lconfigfiles	\
 -lfitsarrayvv -ltxtarrayvv -lcheckset -llinkedlist -ltiming		\
--lastrthreads -lbox
+-lastrthreads -lbox -lpolygon
 
 
 
