MakeCatalog handels blank labeled pixels
Until now, MakeCatalog was not prepared to handle blank pixels in the
labeled images. But now, the labeled pixels are easily ignored.

I also added the names of the input files in the catalogs and also a
column specifying the 5 sigma magnitude in the input image.

--- a/src/mkcatalog/astmkcatalog.conf
+++ b/src/mkcatalog/astmkcatalog.conf
@@ -27,6 +27,7 @@
  skysubtracted   0
 
 # Output:
+ nsigmag         5
  intwidth        6
  floatwidth     13
  accuwidth      15
@@ -34,7 +35,7 @@
  accuprecision   8
 
 # Catalog columns:
- sn              1
+# sn              1
 # std             1
 # sky             1
 # rivernum        1
@@ -47,13 +48,13 @@
 # clumpsflux      1
 # clumpsarea      1
 # numclumps       1
- magnitude       1
+# magnitude       1
 # flux            1
 # area            1
 # dec             1
 # ra              1
- y               1
- x               1
+# y               1
+# x               1
  idinhostobj     1
  hostobjid       1
  id              1
