Removed flux from MakeCatalog
I had made a mistake on the definition of flux. Flux is defined as the
area divided by the area that collects the light (the telescope
aperture), not the area you use to measure its area or the number of
pixels times the area of the pixels!!! So I removed flux from the
columns in MakeCatalog and corrected the explanation in the manual.

--- a/src/mkcatalog/astmkcatalog.conf
+++ b/src/mkcatalog/astmkcatalog.conf
@@ -39,22 +39,20 @@
 # std             1
 # sky             1
 # rivernum        1
-# riverflux       1
+# riverave        1
 # clumpsdec       1
 # clumpsra        1
 # clumpsy         1
 # clumpsx         1
 # clumpsmagnitude 1
-# clumpsflux      1
 # clumpsarea      1
 # numclumps       1
 # magnitude       1
-# flux            1
 # area            1
 # dec             1
 # ra              1
 # y               1
 # x               1
- idinhostobj     1
- hostobjid       1
+# idinhostobj     1
+# hostobjid       1
  id              1
