--- a/src/imgcrop/astimgcrop.conf
+++ b/src/imgcrop/astimgcrop.conf
@@ -29,6 +29,8 @@
  racol          3
  deccol         4
  wwidth         3
+ hstartwcs      0
+ hendwcs        0
 
 # Output parameters:
  checkcenter    3
