Images in manual and explanation of frequency domain
There were two major additions:

  - A full set of subsubsections in the manual which explain the full
    idea behind the frequency space and sampling. It is still not
    complete (for example I have to add Descrete Fourier Transform
    too). But for a start it is good.

  - In order to give a good review of the frequency domain, I had to
    add some figures. Since these were the first set of figures in the
    manual, there were a lot of things I had to do in order to manage
    them correctly. Fortunately, it seems they are mostly done now:

         - There are two types of figures and the version control
           differs for each. But they are both prepared by running
           `make' in the doc/plotscr/ directory.

               - When the image is actually a rasterized input image,
                 then, only its .png format is version controlled and
                 stored in the gnuastro-figures/ directory.

               - LaTeX plots. For these files, the figures are not
                 version controlled. Only the LaTeX source files
                 are. There is a doc/plotsrc/ directory which keeps a
                 main LaTeX file and the separte plot source
                 files. Once `make' is run in that directory, all the
                 plots will be made and put into the correct
                 directory.

         - All figures are included in the distribution tar.gz, so the
           user can easily make the manual in any format they want.

--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,10 @@ doc/stamp-vti
 autom4te.cache
 doc/texinfo.tex
 doc/version.texi
+doc/plotsrc/tikz/
 doc/www/gnuastro/CVS/
 doc/www/gnuastro/manual/
 doc/www/gnuastro/MathJax/
 doc/subpackageversions.texi
+doc/gnuastro-figures/iandtime.png
+doc/gnuastro-figures/samplingfreq.png
