--- a/doc/plotsrc/Makefile
+++ b/doc/plotsrc/Makefile
@@ -1,5 +1,33 @@
-all: all.pdf
+# Prepare all the figures for the GNU Astronomy Utilities manual.
+#
+# Original author:
+#     Mohammad Akhlaghi <akhlaghi@gnu.org>
+# Contributing author(s):
+# Copyright (C) 2015, Free Software Foundation, Inc.
+#
+# GNU Astronomy Utilities is free software: you can redistribute it
+# and/or modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation, either version 3 of
+# the License, or (at your option) any later version.
+#
+# GNU Astronomy Utilities is distributed in the hope that it will be
+# useful, but WITHOUT ANY WARRANTY; without even the implied warranty
+# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with GNU Astronomy Utilities. If not, see
+# <http://www.gnu.org/licenses/>.
 
+# Definitions of which rules to apply:
+all: all.pdf
+.PHONY: clean
+
+
+
+
+
+# Make all the plots and convert all the figures
 all.pdf: all.tex ./tex/*.tex ./conversions.sh
 
 # 	Make the tikz directory if it doesn't exist:
@@ -16,3 +44,19 @@ all.pdf: all.tex ./tex/*.tex ./conversions.sh
 
 #	Make all the conversions:
 	./conversions.sh ../gnuastro-figures/
+
+
+
+
+
+# Clean all generated plots and conversions:
+#   1. Copy all the actual PNG files into this directory.
+#        NOTE I:  All non-plot figures should be saved in PNG.
+#        NOTE II: All non-plot PNG figures should be listed here.
+#   2. Remove everything in the gnuastro-figures directory
+#   3. Put the actual images back in that directory.
+clean:
+	rm -rf all.pdf tikz
+	cp ../gnuastro-figures/epicycles.png ./
+	rm ../gnuastro-figures/*
+	mv epicycles.png ../gnuastro-figures/
