--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -35,7 +35,7 @@ bin_PROGRAMS = astconvolve
 astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
 convolve.h cite.h
 
-astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lcheckset	\
+astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.la -lcheckset	\
 -lfitsarrayvv -ltiming -lconfigfiles -lmesh -lastrthreads		\
 -lspatialconvolve -lbox -larraymanip -lstatistics -lforqsort		\
 -llinkedlist
