--- a/src/imgstat/Makefile.am
+++ b/src/imgstat/Makefile.am
@@ -35,7 +35,7 @@ bin_PROGRAMS = astimgstat
 astimgstat_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 imgstat.c imgstat.h
 
-astimgstat_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lconfigfiles	\
+astimgstat_LDADD = $(top_builddir)/gnulib/lib/libgnu.la -lconfigfiles	\
 -lfitsarrayvv -lcheckset -ltiming -llinkedlist -lmode -lstatistics	\
 -larraymanip -lforqsort
 
