--- a/src/mkcatalog/Makefile.am
+++ b/src/mkcatalog/Makefile.am
@@ -38,7 +38,7 @@ bin_PROGRAMS = astmkcatalog
 astmkcatalog_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 mkcatalog.c mkcatalog.h columns.c columns.h
 
-astmkcatalog_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lconfigfiles	\
+astmkcatalog_LDADD = $(top_builddir)/gnulib/lib/libgnu.la -lconfigfiles	\
 -lfitsarrayvv -lcheckset -ltiming -llinkedlist -ltxtarrayvv
 
 
