Starting work on ImageArithmetic
The basic introduction in the manual is written and so are the basic
inputs, everything seems to be ready to start implementing the reverse
polish algorithm.

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,9 @@ endif
 if COND_HEADER
   MAYBE_HEADER = src/header
 endif
+if COND_IMGARITH
+  MAYBE_IMGARITH = src/imgarith
+endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
 endif
@@ -65,9 +68,9 @@ if COND_GNULIBCHECK
   MAYBE_GNULIBCHECK = gnulib/tests
 endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
-$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGCROP) $(MAYBE_IMGSTAT)	\
-$(MAYBE_IMGWARP) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)	\
-$(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
+$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGARITH) $(MAYBE_IMGCROP)	\
+$(MAYBE_IMGSTAT) $(MAYBE_IMGWARP) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE)	\
+$(MAYBE_MKPROF) $(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
 
 
 ACLOCAL_AMFLAGS = -I m4
