--- a/Makefile.am
+++ b/Makefile.am
@@ -37,8 +37,8 @@ endif
 if COND_HEADER
   MAYBE_HEADER = src/header
 endif
-if COND_IMGARITH
-  MAYBE_IMGARITH = src/imgarith
+if COND_ARITHMETIC
+  MAYBE_ARITHMETIC = src/arithmetic
 endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
@@ -68,7 +68,7 @@ if COND_GNULIBCHECK
   MAYBE_GNULIBCHECK = gnulib/tests
 endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
-$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGARITH) $(MAYBE_IMGCROP)	\
+$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_ARITHMETIC) $(MAYBE_IMGCROP)	\
 $(MAYBE_IMGSTAT) $(MAYBE_IMGWARP) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE)	\
 $(MAYBE_MKPROF) $(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
 
