CosmicCalculator's basic framework is built
The basic framework for CosmicCalculator is now built. It now reads
the proper input files and configuration files. I just have to
implement the integrals to find the cosmological variables. The manual
also needs to thoroughly explain the concepts.

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,6 +34,9 @@ endif
 if COND_CONVOLVE
   MAYBE_CONVOLVE = src/convolve
 endif
+if COND_COSMICCAL
+  MAYBE_COSMICCAL = src/cosmiccal
+endif
 if COND_HEADER
   MAYBE_HEADER = src/header
 endif
@@ -68,9 +71,10 @@ if COND_GNULIBCHECK
   MAYBE_GNULIBCHECK = gnulib/tests
 endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
-$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_ARITHMETIC) $(MAYBE_IMGCROP)	\
-$(MAYBE_IMGSTAT) $(MAYBE_IMGWARP) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE)	\
-$(MAYBE_MKPROF) $(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
+$(MAYBE_CONVOLVE) $(MAYBE_COSMICCAL) $(MAYBE_HEADER)			\
+$(MAYBE_ARITHMETIC) $(MAYBE_IMGCROP) $(MAYBE_IMGSTAT)			\
+$(MAYBE_IMGWARP) $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)	\
+$(MAYBE_NOISECHISEL) $(MAYBE_SUBTRACTSKY) doc tests
 
 
 ACLOCAL_AMFLAGS = -I m4
