--- a/configure.ac
+++ b/configure.ac
@@ -190,8 +190,14 @@ AC_ARG_ENABLE([convolve],
               [AS_HELP_STRING([--enable-convolve],
   	            [Install Convolve and other enabled packages only.])],
 	      [AS_IF([test "x$enable_convolve" != xno],
-                     [enable_convolve=yes; ayes=true])],
+                     [enable_cognvolve=yes; ayes=true])],
               [enable_convolve=notset])
+AC_ARG_ENABLE([cosmiccal],
+              [AS_HELP_STRING([--enable-cosmiccal],
+  	            [Install CosmicCalculator and other enabled packages only.])],
+	      [AS_IF([test "x$enable_cosmiccal" != xno],
+                     [enable_cosmiccal=yes; ayes=true])],
+              [enable_cosmiccal=notset])
 AC_ARG_ENABLE([header],
               [AS_HELP_STRING([--enable-header],
   	            [Install Header and other enabled packages only.])],
@@ -269,6 +275,7 @@ AC_ARG_ENABLE([subtractsky],
 AS_IF([test $ayes = true ],
       [AS_IF([test $enable_convertt = notset], [enable_convertt=no])
        AS_IF([test $enable_convolve = notset], [enable_convolve=no])
+       AS_IF([test $enable_cosmiccal = notset], [enable_cosmiccal=no])
        AS_IF([test $enable_header = notset], [enable_header=no])
        AS_IF([test $enable_arithmetic = notset], [enable_arithmetic=no])
        AS_IF([test $enable_imgcrop = notset], [enable_imgcrop=no])
@@ -283,6 +290,7 @@ AS_IF([test $ayes = true ],
 
       [AS_IF([test $enable_convertt = notset], [enable_convertt=yes])
        AS_IF([test $enable_convolve = notset], [enable_convolve=yes])
+       AS_IF([test $enable_cosmiccal = notset], [enable_cosmiccal=yes])
        AS_IF([test $enable_header = notset], [enable_header=yes])
        AS_IF([test $enable_arithmetic = notset], [enable_arithmetic=yes])
        AS_IF([test $enable_imgcrop = notset], [enable_imgcrop=yes])
@@ -303,6 +311,7 @@ AS_IF([test $ayes = true ],
 # Make the enable_package values available for the Makefile:
 AM_CONDITIONAL([COND_CONVERTT], [test $enable_convertt = yes])
 AM_CONDITIONAL([COND_CONVOLVE], [test $enable_convolve = yes])
+AM_CONDITIONAL([COND_COSMICCAL], [test $enable_cosmiccal = yes])
 AM_CONDITIONAL([COND_HEADER], [test $enable_header = yes])
 AM_CONDITIONAL([COND_IMGCROP], [test $enable_imgcrop = yes])
 AM_CONDITIONAL([COND_ARITHMETIC], [test $enable_arithmetic = yes])
@@ -330,6 +339,7 @@ AC_CONFIG_FILES([Makefile
                  gnulib/tests/Makefile
                  src/convertt/Makefile
                  src/convolve/Makefile
+                 src/cosmiccal/Makefile
            	 src/mkcatalog/Makefile
                  src/arithmetic/Makefile
                  src/noisechisel/Makefile
