CosmicCalculator now does the basic calculations
The most basic calculations and set of cosmological variables are now
done with CosmicCalculator. There is certainly place for many more
calculations in the future, but for now, this does seem to be a good
start. A very simple initial test is also written for it to just check
if it runs, later more sophisticated tests (which actually check the
values) have to be written.

--- a/src/cosmiccal/astcosmiccal.conf
+++ b/src/cosmiccal/astcosmiccal.conf
@@ -19,10 +19,9 @@
 
 # Input:
  redshift            1
- curvature           0
  H0              68.14
  olambda        0.6964
  omatter        0.3036
  oradiation        0.0
 
-# Output:g
+# Output:
