--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -42,7 +42,7 @@ imgwarp/imgwarp_scale.sh imgwarp/homographic.sh mknoise/addnoise.sh	\
 mkprof/ellipticalmasks.sh header/write.sh header/print.sh		\
 header/update.sh header/delete.sh imgstat/basicstats.sh			\
 subtractsky/subtractsky.sh noisechisel/noisechisel.sh			\
-mkcatalog/simple.sh arithmetic/snimage.sh
+mkcatalog/simple.sh arithmetic/snimage.sh cosmiccal/simpletest.sh
 
 EXTRA_DIST = $(TESTS) mkprof/mkprofcat1.txt			\
 mkprof/mkprofcat1_mask.txt mkprof/mkprofcat2.txt		\
